some data visualization

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -15,27 +15,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train': <PrefetchDataset element_spec={'data': {'customer_id': TensorSpec(shape=(), dtype=tf.string, name=None), 'helpful_votes': TensorSpec(shape=(), dtype=tf.int32, name=None), 'marketplace': TensorSpec(shape=(), dtype=tf.string, name=None), 'product_category': TensorSpec(shape=(), dtype=tf.string, name=None), 'product_id': TensorSpec(shape=(), dtype=tf.string, name=None), 'product_parent': TensorSpec(shape=(), dtype=tf.string, name=None), 'product_title': TensorSpec(shape=(), dtype=tf.string, name=None), 'review_body': TensorSpec(shape=(), dtype=tf.string, name=None), 'review_date': TensorSpec(shape=(), dtype=tf.string, name=None), 'review_headline': TensorSpec(shape=(), dtype=tf.string, name=None), 'review_id': TensorSpec(shape=(), dtype=tf.string, name=None), 'star_rating': TensorSpec(shape=(), dtype=tf.int32, name=None), 'total_votes': TensorSpec(shape=(), dtype=tf.int32, name=None), 'verified_purchase': TensorSpec(shape=(), dtype=tf.int64, name=None), 'vine': TensorSpec(shape=(), dtype=tf.int64, name=None)}}>}\n",
+      "tfds.core.DatasetInfo(\n",
+      "    name='amazon_us_reviews',\n",
+      "    full_name='amazon_us_reviews/Software_v1_00/0.1.0',\n",
+      "    description=\"\"\"\n",
+      "    Amazon Customer Reviews (a.k.a. Product Reviews) is one of Amazons iconic\n",
+      "    products. In a period of over two decades since the first review in 1995,\n",
+      "    millions of Amazon customers have contributed over a hundred million reviews to\n",
+      "    express opinions and describe their experiences regarding products on the\n",
+      "    Amazon.com website. This makes Amazon Customer Reviews a rich source of\n",
+      "    information for academic researchers in the fields of Natural Language\n",
+      "    Processing (NLP), Information Retrieval (IR), and Machine Learning (ML), amongst\n",
+      "    others. Accordingly, we are releasing this data to further research in multiple\n",
+      "    disciplines related to understanding customer product experiences. Specifically,\n",
+      "    this dataset was constructed to represent a sample of customer evaluations and\n",
+      "    opinions, variation in the perception of a product across geographical regions,\n",
+      "    and promotional intent or bias in reviews.\n",
+      "    \n",
+      "    Over 130+ million customer reviews are available to researchers as part of this\n",
+      "    release. The data is available in TSV files in the amazon-reviews-pds S3 bucket\n",
+      "    in AWS US East Region. Each line in the data files corresponds to an individual\n",
+      "    review (tab delimited, with no quote and escape characters).\n",
+      "    \n",
+      "    Each Dataset contains the following columns : marketplace - 2 letter country\n",
+      "    code of the marketplace where the review was written. customer_id - Random\n",
+      "    identifier that can be used to aggregate reviews written by a single author.\n",
+      "    review_id - The unique ID of the review. product_id - The unique Product ID the\n",
+      "    review pertains to. In the multilingual dataset the reviews for the same product\n",
+      "    in different countries can be grouped by the same product_id. product_parent -\n",
+      "    Random identifier that can be used to aggregate reviews for the same product.\n",
+      "    product_title - Title of the product. product_category - Broad product category\n",
+      "    that can be used to group reviews (also used to group the dataset into coherent\n",
+      "    parts). star_rating - The 1-5 star rating of the review. helpful_votes - Number\n",
+      "    of helpful votes. total_votes - Number of total votes the review received.\n",
+      "    vine - Review was written as part of the Vine program. verified_purchase - The\n",
+      "    review is on a verified purchase. review_headline - The title of the review.\n",
+      "    review_body - The review text. review_date - The date the review was written.\n",
+      "    \"\"\",\n",
+      "    config_description=\"\"\"\n",
+      "    A dataset consisting of reviews of Amazon Software_v1_00 products in US marketplace. Each product has its own version as specified with it.\n",
+      "    \"\"\",\n",
+      "    homepage='https://s3.amazonaws.com/amazon-reviews-pds/readme.html',\n",
+      "    data_path='C:\\\\Users\\\\Frederico\\\\tensorflow_datasets\\\\amazon_us_reviews\\\\Software_v1_00\\\\0.1.0',\n",
+      "    file_format=tfrecord,\n",
+      "    download_size=89.66 MiB,\n",
+      "    dataset_size=366.16 MiB,\n",
+      "    features=FeaturesDict({\n",
+      "        'data': FeaturesDict({\n",
+      "            'customer_id': string,\n",
+      "            'helpful_votes': int32,\n",
+      "            'marketplace': string,\n",
+      "            'product_category': string,\n",
+      "            'product_id': string,\n",
+      "            'product_parent': string,\n",
+      "            'product_title': string,\n",
+      "            'review_body': string,\n",
+      "            'review_date': string,\n",
+      "            'review_headline': string,\n",
+      "            'review_id': string,\n",
+      "            'star_rating': int32,\n",
+      "            'total_votes': int32,\n",
+      "            'verified_purchase': ClassLabel(shape=(), dtype=int64, num_classes=2),\n",
+      "            'vine': ClassLabel(shape=(), dtype=int64, num_classes=2),\n",
+      "        }),\n",
+      "    }),\n",
+      "    supervised_keys=None,\n",
+      "    disable_shuffling=False,\n",
+      "    splits={\n",
+      "        'train': <SplitInfo num_examples=341931, num_shards=4>,\n",
+      "    },\n",
+      "    citation=\"\"\"\"\"\",\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
-    "ds = tfds.load('amazon_us_reviews/Software_v1_00',split='train[:70%]', shuffle_files=True)"
+    "ds, info = tfds.load('amazon_us_reviews/Software_v1_00', shuffle_files=True, with_info=True)\n",
+    "print(ds)\n",
+    "print(info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_fcc57\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_fcc57_level0_col0\" class=\"col_heading level0 col0\" >data/customer_id</th>\n",
+       "      <th id=\"T_fcc57_level0_col1\" class=\"col_heading level0 col1\" >data/helpful_votes</th>\n",
+       "      <th id=\"T_fcc57_level0_col2\" class=\"col_heading level0 col2\" >data/marketplace</th>\n",
+       "      <th id=\"T_fcc57_level0_col3\" class=\"col_heading level0 col3\" >data/product_category</th>\n",
+       "      <th id=\"T_fcc57_level0_col4\" class=\"col_heading level0 col4\" >data/product_id</th>\n",
+       "      <th id=\"T_fcc57_level0_col5\" class=\"col_heading level0 col5\" >data/product_parent</th>\n",
+       "      <th id=\"T_fcc57_level0_col6\" class=\"col_heading level0 col6\" >data/product_title</th>\n",
+       "      <th id=\"T_fcc57_level0_col7\" class=\"col_heading level0 col7\" >data/review_body</th>\n",
+       "      <th id=\"T_fcc57_level0_col8\" class=\"col_heading level0 col8\" >data/review_date</th>\n",
+       "      <th id=\"T_fcc57_level0_col9\" class=\"col_heading level0 col9\" >data/review_headline</th>\n",
+       "      <th id=\"T_fcc57_level0_col10\" class=\"col_heading level0 col10\" >data/review_id</th>\n",
+       "      <th id=\"T_fcc57_level0_col11\" class=\"col_heading level0 col11\" >data/star_rating</th>\n",
+       "      <th id=\"T_fcc57_level0_col12\" class=\"col_heading level0 col12\" >data/total_votes</th>\n",
+       "      <th id=\"T_fcc57_level0_col13\" class=\"col_heading level0 col13\" >data/verified_purchase</th>\n",
+       "      <th id=\"T_fcc57_level0_col14\" class=\"col_heading level0 col14\" >data/vine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fcc57_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_fcc57_row0_col0\" class=\"data row0 col0\" >b&#x27;52130809&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col1\" class=\"data row0 col1\" >0</td>\n",
+       "      <td id=\"T_fcc57_row0_col2\" class=\"data row0 col2\" >b&#x27;US&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col3\" class=\"data row0 col3\" >b&#x27;Software&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col4\" class=\"data row0 col4\" >b&#x27;B003YJ5DKG&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col5\" class=\"data row0 col5\" >b&#x27;470091820&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col6\" class=\"data row0 col6\" >b&#x27;Quicken Deluxe 2011 - [Old Version]&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col7\" class=\"data row0 col7\" >b&#x27;I have used quicken for years and it continues to be an outstanding product. In my opinion, it is the best on the market.&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col8\" class=\"data row0 col8\" >b&#x27;2012-09-14&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col9\" class=\"data row0 col9\" >b&#x27;quicken 11&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col10\" class=\"data row0 col10\" >b&#x27;R3P48NUU0WOHGR&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row0_col11\" class=\"data row0 col11\" >5</td>\n",
+       "      <td id=\"T_fcc57_row0_col12\" class=\"data row0 col12\" >0</td>\n",
+       "      <td id=\"T_fcc57_row0_col13\" class=\"data row0 col13\" >1 (N)</td>\n",
+       "      <td id=\"T_fcc57_row0_col14\" class=\"data row0 col14\" >1 (N)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fcc57_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_fcc57_row1_col0\" class=\"data row1 col0\" >b&#x27;14188167&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col1\" class=\"data row1 col1\" >0</td>\n",
+       "      <td id=\"T_fcc57_row1_col2\" class=\"data row1 col2\" >b&#x27;US&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col3\" class=\"data row1 col3\" >b&#x27;Software&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col4\" class=\"data row1 col4\" >b&#x27;B00EYNPY6O&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col5\" class=\"data row1 col5\" >b&#x27;905413223&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col6\" class=\"data row1 col6\" >b&#x27;Genuine Microsoft Windows 8 Pro X64 /64 Bit License Key Card&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col7\" class=\"data row1 col7\" >b&#x27;thanks&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col8\" class=\"data row1 col8\" >b&#x27;2014-12-07&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col9\" class=\"data row1 col9\" >b&#x27;Five Stars&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col10\" class=\"data row1 col10\" >b&#x27;R2F3O8TQNHZHWE&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row1_col11\" class=\"data row1 col11\" >5</td>\n",
+       "      <td id=\"T_fcc57_row1_col12\" class=\"data row1 col12\" >0</td>\n",
+       "      <td id=\"T_fcc57_row1_col13\" class=\"data row1 col13\" >0 (Y)</td>\n",
+       "      <td id=\"T_fcc57_row1_col14\" class=\"data row1 col14\" >1 (N)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fcc57_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_fcc57_row2_col0\" class=\"data row2 col0\" >b&#x27;38338156&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col1\" class=\"data row2 col1\" >0</td>\n",
+       "      <td id=\"T_fcc57_row2_col2\" class=\"data row2 col2\" >b&#x27;US&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col3\" class=\"data row2 col3\" >b&#x27;Software&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col4\" class=\"data row2 col4\" >b&#x27;B009CCXJ0A&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col5\" class=\"data row2 col5\" >b&#x27;722004435&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col6\" class=\"data row2 col6\" >b&#x27;TurboTax Deluxe Federal + E-File + State 2012&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col7\" class=\"data row2 col7\" >b&#x27;Wonderful way to do our taxes. We will definetly use Turbo Tax again next year. Guides us through the whole tax filing.&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col8\" class=\"data row2 col8\" >b&#x27;2013-02-15&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col9\" class=\"data row2 col9\" >b&#x27;Great!!&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col10\" class=\"data row2 col10\" >b&#x27;R33NJIWK7MWP0S&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row2_col11\" class=\"data row2 col11\" >5</td>\n",
+       "      <td id=\"T_fcc57_row2_col12\" class=\"data row2 col12\" >0</td>\n",
+       "      <td id=\"T_fcc57_row2_col13\" class=\"data row2 col13\" >0 (Y)</td>\n",
+       "      <td id=\"T_fcc57_row2_col14\" class=\"data row2 col14\" >1 (N)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fcc57_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_fcc57_row3_col0\" class=\"data row3 col0\" >b&#x27;50978571&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row3_col1\" class=\"data row3 col1\" >0</td>\n",
+       "      <td id=\"T_fcc57_row3_col2\" class=\"data row3 col2\" >b&#x27;US&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row3_col3\" class=\"data row3 col3\" >b&#x27;Software&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row3_col4\" class=\"data row3 col4\" >b&#x27;B00F8K9KZS&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row3_col5\" class=\"data row3 col5\" >b&#x27;634903874&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row3_col6\" class=\"data row3 col6\" >b&#x27;TurboTax Premier Fed, Efile and State 2013&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row3_col7\" class=\"data row3 col7\" >b&quot;AFTER I installed this on my Mac...it says it won&#x27;t work on my old Mac...The one computer that I have always used for taxes...What?  Buy another computer?&quot;</td>\n",
+       "      <td id=\"T_fcc57_row3_col8\" class=\"data row3 col8\" >b&#x27;2015-02-03&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row3_col9\" class=\"data row3 col9\" >b&#x27;AFTER I installed this on my Mac... ...&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row3_col10\" class=\"data row3 col10\" >b&#x27;R30CPMHHH88E52&#x27;</td>\n",
+       "      <td id=\"T_fcc57_row3_col11\" class=\"data row3 col11\" >3</td>\n",
+       "      <td id=\"T_fcc57_row3_col12\" class=\"data row3 col12\" >0</td>\n",
+       "      <td id=\"T_fcc57_row3_col13\" class=\"data row3 col13\" >0 (Y)</td>\n",
+       "      <td id=\"T_fcc57_row3_col14\" class=\"data row3 col14\" >1 (N)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "  data/customer_id  data/helpful_votes data/marketplace data/product_category  \\\n",
+       "0      b'52130809'                   0            b'US'           b'Software'   \n",
+       "1      b'14188167'                   0            b'US'           b'Software'   \n",
+       "2      b'38338156'                   0            b'US'           b'Software'   \n",
+       "3      b'50978571'                   0            b'US'           b'Software'   \n",
+       "\n",
+       "  data/product_id data/product_parent  \\\n",
+       "0   b'B003YJ5DKG'        b'470091820'   \n",
+       "1   b'B00EYNPY6O'        b'905413223'   \n",
+       "2   b'B009CCXJ0A'        b'722004435'   \n",
+       "3   b'B00F8K9KZS'        b'634903874'   \n",
+       "\n",
+       "                                  data/product_title  \\\n",
+       "0             b'Quicken Deluxe 2011 - [Old Version]'   \n",
+       "1  b'Genuine Microsoft Windows 8 Pro X64 /64 Bit ...   \n",
+       "2   b'TurboTax Deluxe Federal + E-File + State 2012'   \n",
+       "3      b'TurboTax Premier Fed, Efile and State 2013'   \n",
+       "\n",
+       "                                    data/review_body data/review_date  \\\n",
+       "0  b'I have used quicken for years and it continu...    b'2012-09-14'   \n",
+       "1                                          b'thanks'    b'2014-12-07'   \n",
+       "2  b'Wonderful way to do our taxes. We will defin...    b'2013-02-15'   \n",
+       "3  b\"AFTER I installed this on my Mac...it says i...    b'2015-02-03'   \n",
+       "\n",
+       "                         data/review_headline     data/review_id  \\\n",
+       "0                               b'quicken 11'  b'R3P48NUU0WOHGR'   \n",
+       "1                               b'Five Stars'  b'R2F3O8TQNHZHWE'   \n",
+       "2                                  b'Great!!'  b'R33NJIWK7MWP0S'   \n",
+       "3  b'AFTER I installed this on my Mac... ...'  b'R30CPMHHH88E52'   \n",
+       "\n",
+       "   data/star_rating  data/total_votes  data/verified_purchase  data/vine  \n",
+       "0                 5                 0                       1          1  \n",
+       "1                 5                 0                       0          1  \n",
+       "2                 5                 0                       0          1  \n",
+       "3                 3                 0                       0          1  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ex = ds.take(1)  # Only take a single example\n",
-    "\n",
-    "# for example in ds['data']:  # example is `{'image': tf.Tensor, 'label': tf.Tensor}`\n",
-    "#   print(list(example.keys()))\n",
-    "#   image = example[\"image\"]\n",
-    "#   label = example[\"label\"]\n",
-    "#   print(image.shape, label)\n",
-    "\n"
+    "tfds.as_dataframe(ds.take(4),info)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11456\\1533205533.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'data'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 'data'"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(ds['data']))\n"
    ]
   }
  ],
